infrastructure/manifests/backstage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
      - image: ryusa/backstage:latest
        args: ["--config", "/config/app-config.production.yaml"]
        name: backstage
        resources: 
          requests:
            cpu: "1.2"
            memory: "500Mi"
          limits:
            cpu: "1.2"
            memory: "500Mi"
        ports:
          - name: http
            containerPort: 7007
        volumeMounts:
          - mountPath: /config
            name: config
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
        args:
          - "--private-ip"
          - "--structured-logs"
          - "--auto-iam-authn"
          - $(CLOUD_SQL)
        securityContext:
          runAsNonRoot: true
        resources:
          requests:
            memory: "256Mi"
            cpu:    "500m"
      volumes:
        - name: config
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  ports:
  - port: 7007
    protocol: TCP
    targetPort: 7007
  selector:
    app: backstage
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: backstage
    networking.gke.io/managed-certificates: backstage-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: backstage
      port:
        number: 7007
